# efficient_hiring_process_design_guide

./: README.md  pyproject.toml
src/: main.py
src/efficient_hiring_process_design_guide/: crew.py  main.py
src/efficient_hiring_process_design_guide/config/: agents.yaml  tasks.yaml
